--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
     <repositories>
         <repository>
             <id>wordrak</id>
-            <url>http://wordrak.github.com/repo</url>
+            <url>https://wordrak.github.com/repo</url>
         </repository>
     </repositories>
     <properties>
